--- a/temp-conversion/src/components/QuestionFields.css
+++ b/temp-conversion/src/components/QuestionFields.css
@@ -1,30 +1,21 @@
-.question-field {
+/* .question-field {
   margin: 15px 0;
 }
 .question-field input,
 .question-field select {
   margin: 0 15px 0 5px;
+} */
+.question-field .row {
+  margin: 15px 0;
+}
+.question-field .col {
+  min-height: 100px;
 }
 
 label {
   /* flex-basis: initial; */
 }
 
-.grade {
-  display: inline-block;
-}
-
-@media screen and (max-width: 1100px) {
-  .question-field {
-    margin: 15px 25%;
-    text-align: left;
-  }
-  .question-field label {
-    display: block;
-  }
-  .remove-row {
-    display: block;
-    width: 100%;
-    margin: 15px 0;
-  }
+.grade span {
+  font-weight: bold;
 }
